--- a/Java/2.Java Utilities & Collections.md
+++ b/Java/2.Java Utilities & Collections.md
@@ -104,6 +104,10 @@ int y = (int)x + 2; // Explicit casting
 System.out.println(y); // 3
 ```
 
+## Order of operations
+
+() -> */ -> +-
+
 ## Java Arrays
 
 - **method overloading:** multiple methods with the same name but different parameter (Ex: Arrays.toString())
