--- a/DSA/1.Analysis of Algorithms Part-1.md
+++ b/DSA/1.Analysis of Algorithms Part-1.md
@@ -4,15 +4,15 @@
 
 ## Topics
 
-- [The Role of Algorithm](./Analysis%20of%20Algorithms%20Part-1.md#the-role-of-algorithm)
-- [Asymptotic Complexity](./Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity)
-- [Asymptotic NOtation & Growth of Functions](./Analysis%20of%20Algorithms%20Part-1.md#asymptotic-notation-growth-of-functions)
-- [Comparing of two functions](./Analysis%20of%20Algorithms%20Part-1.md#comparing-of-two-functions)
-- [Order of Growth](./Analysis%20of%20Algorithms%20Part-1.md#order-of-growth)
-- [Asymptotic Complexity - Examples](./Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity-examples)
-- [Worksheet 1.1: Growth of Functions and Run-Time Estimation](./Analysis%20of%20Algorithms%20Part-1.md#worksheet-11-growth-of-functions-and-run-time-estimation)
-- [Worksheet 1.2: Asymptotic Complexity](./Analysis%20of%20Algorithms%20Part-1.md#worksheet-12-asymptotic-complexity)
-- [Reference](./Analysis%20of%20Algorithms%20Part-1.md#reference)
+- [The Role of Algorithm](./1.Analysis%20of%20Algorithms%20Part-1.md#the-role-of-algorithm)
+- [Asymptotic Complexity](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity)
+- [Asymptotic NOtation & Growth of Functions](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-notation-growth-of-functions)
+- [Comparing of two functions](./1.Analysis%20of%20Algorithms%20Part-1.md#comparing-of-two-functions)
+- [Order of Growth](./1.Analysis%20of%20Algorithms%20Part-1.md#order-of-growth)
+- [Asymptotic Complexity - Examples](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity-examples)
+- [Worksheet 1.1: Growth of Functions and Run-Time Estimation](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-11-growth-of-functions-and-run-time-estimation)
+- [Worksheet 1.2: Asymptotic Complexity](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-12-asymptotic-complexity)
+- [Reference](./1.Analysis%20of%20Algorithms%20Part-1.md#reference)
 
 <p align="right"><a href="#top">⬆️ Back to Top</a></p>
 
