added java program skeleton

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -7,6 +7,7 @@
 <summary>Table of contents</summary>
 
 - [JDK Architecture](#jdk-architecture)
+- [Java Program Skeleton](#-java-program-skeleton)
 - [Compilation Flow](#compilation-flow)
 - [Reading Input from Keyboard](#reading-input-from-keyboard)
 - [Common CMD Commands](#common-cmd-commands)
@@ -26,15 +27,10 @@
 <table>
     <tr>
         <th>JDK Architecture</th>
-        <th>Representation</th>
     </tr>
     <tr>
         <td>
-            JDK (Development + tools)
-             [-> [JRE(Java Class Library ) -> JVM(Java Virtual Machine)]]
-        </td>
-        <td>
-            <img src="https://github.com/user-attachments/assets/78b59b0f-cfae-4454-a918-79c50274472a" width="100%" title="JDK Architecture"/>
+            <img src="https://github.com/user-attachments/assets/29f54eae-0dde-48b3-911f-d9ce346fa046" width="100%" title="JDK Architecture"/>
         </td>
     </tr>
 </table>
@@ -63,6 +59,27 @@ So, Java is platform independent
 ```
 
 <hr/>
+
+## ☕ Java Program Skeleton
+
+This guide provides the minimal structure required to compile and run a basic Java application.
+
+### The Basic File Structure
+
+All executable Java code must reside within a class. The file name **must** match the public class name.
+
+**File Name:** `MyApplication.java`
+
+```java
+public class MyApplication {
+    // Execution starts here
+    public static void main(String[] args) {
+        // --- Your application logic goes inside here ---
+        
+        System.out.println("Hello, Java World!"); 
+    } 
+}
+```
 
 ## Reading Input from Keyboard
 ```
