--- a/Java/2.Java Utilities & Collections.md
+++ b/Java/2.Java Utilities & Collections.md
@@ -233,7 +233,7 @@ ArrayList <Integer> al2 = new ArrayList<>(Arrays.asList(1,2,3));
       <td><code>al.contains(50);</code></td>
     </tr>
     <tr>
-      <td><code>size()/code></td>
+      <td><code>size()</td>
       <td>Returns number of elements</td>
       <td><code>al.size();</code></td>
     </tr>
