added primitive data types table

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -7,10 +7,9 @@
 <summary>Table of contents</summary>
 
 - [JDK Architecture](#jdk-architecture)
-- [Java Program Skeleton](#-java-program-skeleton)
 - [Compilation Flow](#compilation-flow)
+- [Java Program Skeleton](#-java-program-skeleton)
 - [Reading Input from Keyboard](#reading-input-from-keyboard)
-- [Common CMD Commands](#common-cmd-commands)
 - [JVM Architecture](#jvm-architecture)
 - [Primitive Types](#primitive-types)
 - [Primitive Types vs Reference Types](#primitive-types-vs-reference-types)
@@ -39,30 +38,27 @@
 
 ## Compilation Flow
 
-```
-First.jav (Source Code) ----> Java c (Java Compiler - from jdk) ---> First.class (Byte code)
+- First.jav (Source Code) ----> Java c (Java Compiler - from jdk) ---> First.class (Byte code)
 
-We can run the Java Byte code (*.class file) on any system had JRE (Java Runtime Environment)
+- We can run the Java Byte code (*.class file) on any system had JRE (Java Runtime Environment)
 
-JRE contains JVM (Java Virtual Machine)
+- JRE contains JVM (Java Virtual Machine)
 
-We can download Java Virtual Machine for so many systems in their native
+- We can download Java Virtual Machine for so many systems in their native
 
-Byte Code (*.class) -> JVM -> Native Code (Windows, mac,..)
+- Byte Code (*.class) -> JVM -> Native Code (Windows, mac,..)
 
-So, Java is platform independent
+- So, Java is platform independent
 
 
 **Java compilation:** javac Filename.java
 **Run Java Program1:** java com.decider.Main (if class was inside a package)
 **Run Java Program2:** java Main (if class was not inside a package)
-```
+
 
 <hr/>
 
 ## ☕ Java Program Skeleton
-
-This guide provides the minimal structure required to compile and run a basic Java application.
 
 ### The Basic File Structure
 
@@ -81,6 +77,16 @@ public class MyApplication {
 }
 ```
 
+### Key Notes
+
+- when class is declared public, only then file name and class name should be same
+- when there is no public class defined 
+- If a class (or nested class) is defined, the compiler will create a corresponding .class file for all classes in the program.
+- to run the .class file it should contain main method
+- So when you run a java program(java First) it will start executing the .class file, and it starts searching for main function.
+
+<hr/>
+
 ## Reading Input from Keyboard
 ```
   import java.lang.*;   #default package
@@ -91,21 +97,10 @@ public class MyApplication {
   nextInt()
   nextFloat()
   nextDouble()
-  next()
-  nextLine()
-
-  useRadix()
+  next() - reads only 1 word
+  nextLine() - reads multiple words
 ```
 
-<hr/>
-
-## Common CMD Commands
-
-```
-javac file_name.java  #to compile
-java file_name #to execute
-javap java.util.Scanner # to get all the methods in the specified package
-```
 <hr/>
 
 ## JVM Architecture
@@ -122,56 +117,7 @@ javap java.util.Scanner # to get all the methods in the specified package
 - **Primitive**: For storing simple values
 - **Reference**: For storing complex objects
 
-<table>
-    <tr>
-        <th colspan="3">Primitive Types</th>
-    </tr>
-    <tr>
-        <th>Type</th>
-        <th>Bytes</th>
-        <th>Range</th>
-    </tr>
-    <tr>
-        <td><b>byte</b></td>
-        <td>1</td>
-        <td>[-128,127]</td>
-    </tr>
-    <tr>
-        <td><b>short</b></td>
-        <td>2</td>
-        <td>[-32K,32K]</td>
-    </tr>
-    <tr>
-        <td><b>int</b></td>
-        <td>4</td>
-        <td>[-2B,2B]</td>
-    </tr>
-    <tr>
-        <td><b>long</b></td>
-        <td>8</td>
-        <td>[-2B,2B]</td>
-    </tr>
-    <tr>
-        <td><b>float</b></td>
-        <td>4</td>
-        <td>[-2B,2B]</td>
-    </tr>
-    <tr>
-        <td><b>double</b></td>
-        <td>8</td>
-        <td>[-2B,2B]</td>
-    </tr>
-    <tr>
-        <td><b>char</b></td>
-        <td>2</td>
-        <td>A,B,C,..</td>
-    </tr>
-    <tr>
-        <td><b>boolean</b></td>
-        <td>1</td>
-        <td>true/false</td>
-    </tr>
-</table>
+<img src="https://github.com/user-attachments/assets/1c80480c-fede-45e1-a440-bbdca9c9d3ba" width="100%" title="JDK Architecture"/>
 
 Code:
 ```
