seperated oops file and added types content: Strings and Escape Sequences

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -14,10 +14,7 @@
 - [Primitive Types](#primitive-types)
 - [Primitive Types vs Reference Types](#primitive-types-vs-reference-types)
 - [Parameters vs Arguments](#parameters-vs-arguments)
-- [Reference Types](#reference-types)
-- [OOP Concepts](#oops-concepts)
-- [Abstract Classes](#abstract-classes)
-- [Interfaces in Java](#interfaces-in-java)
+- [Strings](#strings)
 
 </details>
 
@@ -40,21 +37,19 @@
 
 - First.jav (Source Code) ----> Java c (Java Compiler - from jdk) ---> First.class (Byte code)
 
-- We can run the Java Byte code (*.class file) on any system had JRE (Java Runtime Environment)
+- We can run the Java Byte code (\*.class file) on any system had JRE (Java Runtime Environment)
 
 - JRE contains JVM (Java Virtual Machine)
 
 - We can download Java Virtual Machine for so many systems in their native
 
-- Byte Code (*.class) -> JVM -> Native Code (Windows, mac,..)
+- Byte Code (\*.class) -> JVM -> Native Code (Windows, mac,..)
 
 - So, Java is platform independent
-
 
 **Java compilation:** javac Filename.java
 **Run Java Program1:** java com.decider.Main (if class was inside a package)
 **Run Java Program2:** java Main (if class was not inside a package)
-
 
 <hr/>
 
@@ -71,16 +66,16 @@ public class MyApplication {
     // Execution starts here
     public static void main(String[] args) {
         // --- Your application logic goes inside here ---
-        
-        System.out.println("Hello, Java World!"); 
-    } 
+
+        System.out.println("Hello, Java World!");
+    }
 }
 ```
 
 ### Key Notes
 
 - when class is declared public, only then file name and class name should be same
-- when there is no public class defined 
+- when there is no public class defined
 - If a class (or nested class) is defined, the compiler will create a corresponding .class file for all classes in the program.
 - to run the .class file it should contain main method
 - So when you run a java program(java First) it will start executing the .class file, and it starts searching for main function.
@@ -88,6 +83,7 @@ public class MyApplication {
 <hr/>
 
 ## Reading Input from Keyboard
+
 ```
   import java.lang.*;   #default package
   import java.util.*;   # for scanner class
@@ -106,9 +102,10 @@ public class MyApplication {
 ## JVM Architecture
 
 -> Memory
-  - **Heap** - where objects are created (dynamic)
-  - **stack** - where local variables and references are created
-  - **code section** - contains the code (class Loader loads the code, - **Interpreter/JIT** - just in time compilation will interpret the code)
+
+- **Heap** - where objects are created (dynamic)
+- **stack** - where local variables and references are created
+- **code section** - contains the code (class Loader loads the code, - **Interpreter/JIT** - just in time compilation will interpret the code)
 
 <hr/>
 
@@ -120,6 +117,7 @@ public class MyApplication {
 <img src="https://github.com/user-attachments/assets/1c80480c-fede-45e1-a440-bbdca9c9d3ba" width="100%" title="JDK Architecture"/>
 
 Code:
+
 ```
 package com.decider;
 
@@ -177,112 +175,131 @@ public class Main {
 }
 ```
 
+- Reference types are copied by the references (Above point1, point2 points to same addr that is allocated in memory)
+- Primitive types are copied by the value
+
 <hr/>
 
 ## Parameters vs Arguments
 
-- Parameters are the holes that we define in the method
-- Arguments are the actual values that we pass to the method
-
-<hr/>
-
-
-
-## Reference Types
-
-- parent reference, child reference
-- Reference Type decides which variables are accessible.
-- Object Type decides which methods are executed at runtime (polymorphism).
-- Variables are shadowed, methods are overridden.
-
-<hr/>
-
-## OOP Concepts
-
-- **abstraction**
-- **encapsulation**
-- **inheritance** : single, multilevel, hierarchical, multiple(through interface), hybrid
-- **polymorphism** : static compile time (method overloading) , dynamic run time (method overriding)
-
-<p align="right">(<a href="#top">back to top</a>)</p>
-
-<hr/>
-
-## Abstract Classes
-
-- concrete class -> general class ex: class Parent {}
-- abstract class - uses abstract keyword ex: abstract class Parent {}
-- we cannot create an instance(object) of abstract class
-- class that extends (inherits) abstract class will also be abstract 
-- class to overcome abstract class then every method should be override
-- abstract method - method which is not having body (undefined method)
-    ex: abstract void meth2();
-- abstract class - class that having atleast one abstract method (that means class is also not completely defined)
-
-- abstract class set some standards like ex:
-    
-```
-abstract class Hospital {
-  abstract void emergency();
-  abstract void appointment();
-  abstract void admit();
-  abstract void billing();
-  ...
-} 
-
-class MyHospital extends Hospital {
-  MyHospital() {}
-  void emergency() {}
-  void appointment() {}
-  ...
-}
-
-Hospital h = new MyHospital();
-// we make sure MyHospital only follow the standards that are set by Hospital as it can access the methods only defined in Hospital
-```
-
-<p align="right">(<a href="#top">back to top</a>)</p>
-
-<hr/>
-
-## Interfaces in Java
-
-- by default every method is abstract 
-- classes are extends
-- interfaces are implements
-- we cannot create object for interface
-- In java a class can be exteded only from single class (multiple inheritance is not possible) but in interfances it can implements from so many interfaces
-- interface is defined for achieving runtime polymorphism and dynamic method dispatch
-- it can have static methods with body
-
-- ex
+- **Parameters** are the holes that we define in the method
+- **Arguments** are the actual values that we pass to the method
 
 ```
-interface Parent1 {
-  void meth1();
-}
-
-interface Parent2 {
-  void meth1();
-}
-  
-class Child1 implements Parent1,Parent2 {
-  public void meth1() {
-    System.out.println("Child meth2");
-  } 
-}
-
-public class MyFirst {
-
-  public static void main(String[] args) {
-    // TODO Auto-generated method stub
-    Child1 p = new Child1();
-    p.meth1();
-  }
-}
+ex: message.replace(target: '!', replacement: '*');
+Here target, replacement are parameters (these are defined at the time of method declaration)
+and the '!','*' are arguments (actual values passed)
 ```
-
-<p align="right">(<a href="#top">back to top</a>)</p>
 
 <hr/>
 
+## Strings
+
+1. Declaration:
+
+```
+String traditional = new String("Hello World"); // Using new String() always creates a new object in heap.
+String shortHand = "Simple"; // Using string literals ("...") stores/reuses them in the String constant pool, making it memory-efficient.
+System.out.println(traditional);
+System.out.println(shortHand);
+```
+
+**Case-1**: new String("Hello World")
+
+- "Hello World" → first stored in String Constant Pool (SCP) (in heap).
+- new String(...) → creates a new copy of that same content in the regular heap area (outside SCP).
+- So you get two objects in memory:
+
+```
+SCP: "Hello World"
+Heap: new String("Hello World") → separate object with same content
+```
+
+- The variable traditional → points to the heap object, not the pooled one.
+- Hence, **extra memory** used unnecessarily.
+
+**Case-2**: "Hello World"
+
+- JVM checks the String Constant Pool (SCP):
+  - If "Hello World" exists → reuse it.
+  - If not → create it once and reuse later.
+- So only one object created or reused.
+- The variable shortHand → directly refers to the pooled string.
+- Hence, **memory-efficient** ✅.
+
+2. Behaviour:
+
+- Strings are immutable (Once created, their value cannot be changed.)
+- Any modification (like concatenation, replace, etc.) creates a new String object.
+
+3. Intro to some methods
+
+```
+String test ="   Hello World" + "!!  ";
+System.out.println(test.toLowerCase()); //will return string - hello world!!
+System.out.println(test.replace('!', '*')); // Hello World**
+System.out.println(test.indexOf("orld")); // 10
+System.out.println(test.trim()); // Hello World!!
+System.out.println(test); //   Hello World!!
+```
+
+## Escape Sequences
+
+1. Declaration - \
+
+```
+System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
+```
+
+2. Behaviour
+
+- Escape sequences are special character combinations starting with \ that represent characters which can’t be typed or printed directly.
+
+3. Under the hood
+
+- **Step-1**: — Compile-Time Translation
+
+  ```
+  String s = "Hello\nWorld";
+  ```
+
+  - The Java compiler (javac) reads the source code textually.
+  - When it sees \n, it does not store backslash + n literally.
+  - It replaces them with the single Unicode character that represents newline (line feed, U+000A).
+  - So internally, the compiler turns:
+
+  ```
+  "Hello\nWorld"
+  "Hello<0x000A>World"
+  ```
+
+  (where <0x000A> is the newline character in Unicode/ASCII).
+
+- **Step-2**: — Stored in String Constant Pool
+
+  - That compiled string literal is stored in the class file’s constant pool (not SCP yet) in UTF-8 or modified UTF-8 encoding.
+  - When the class loads, the JVM moves it into the String Constant Pool (SCP).
+
+- **Step-3**: — Runtime Behavior
+  - At Runtime
+    - When the JVM executes System.out.println(s);
+    - It reads that string from the pool
+    - The internal character array in String contains actual characters like:
+    ```
+    ['H', 'e', 'l', 'l', 'o', '\n', 'W', 'o', 'r', 'l', 'd']
+    ```
+    - The \n is interpreted by the output stream (console) as a newline action, not as literal \ and n.
+
+4. Summary
+
+- Escape sequences are compile-time translations —
+- they don’t exist as special runtime symbols.
+- After compilation, the actual character codes are stored directly in the string object.
+
+5. Special Case — Unicode Escapes
+
+- Java also supports \u Unicode escapes, which are processed before lexical parsing.
+
+```
+System.out.println("\u0048\u0065\u006C\u006C\u006F"); \\Hello
+```
