--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -15,6 +15,7 @@
 - [Primitive Types vs Reference Types](#primitive-types-vs-reference-types)
 - [Parameters vs Arguments](#parameters-vs-arguments)
 - [Strings](#strings)
+- [Escape Sequences](#Escape-Sequences)
 
 </details>
 
