updated code structure and navigation path

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -196,7 +196,7 @@ and the '!','*' are arguments (actual values passed)
 
 ## Strings
 
-1. Declaration:
+### 1. Declaration:
 
 ```
 String traditional = new String("Hello World"); // Using new String() always creates a new object in heap.
@@ -228,12 +228,12 @@ Heap: new String("Hello World") → separate object with same content
 - The variable shortHand → directly refers to the pooled string.
 - Hence, **memory-efficient** ✅.
 
-2. Behaviour:
+### 2. Behaviour:
 
 - Strings are immutable (Once created, their value cannot be changed.)
 - Any modification (like concatenation, replace, etc.) creates a new String object.
 
-3. Intro to some methods
+## 3. Intro to some methods
 
 ```
 String test ="   Hello World" + "!!  ";
@@ -246,17 +246,17 @@ System.out.println(test); //   Hello World!!
 
 ## Escape Sequences
 
-1. Declaration - \
+### 1. Declaration - \
 
 ```
 System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
 ```
 
-2. Behaviour
+### 2. Behaviour
 
 - Escape sequences are special character combinations starting with \ that represent characters which can’t be typed or printed directly.
 
-3. Under the hood
+### 3. Under the hood
 
 - **Step-1**: — Compile-Time Translation
 
@@ -291,13 +291,13 @@ System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
     ```
     - The \n is interpreted by the output stream (console) as a newline action, not as literal \ and n.
 
-4. Summary
+### 4. Summary
 
 - Escape sequences are compile-time translations —
 - they don’t exist as special runtime symbols.
 - After compilation, the actual character codes are stored directly in the string object.
 
-5. Special Case — Unicode Escapes
+### 5. Special Case — Unicode Escapes
 
 - Java also supports \u Unicode escapes, which are processed before lexical parsing.
 
