added java-arrays, operators, casting,..

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -16,6 +16,12 @@
 - [Parameters vs Arguments](#parameters-vs-arguments)
 - [Strings](#strings)
 - [Escape Sequences](#Escape-Sequences)
+- [Arrays](#arrays)
+- [Multi-dimensional Arrays](#multi-dimensional-arrays)
+- [Constants](#constants)
+- [Arithmetic Expressions](#arithmetic-expressions)
+- [Order of Operations](#order-of-operations-operator-precedence)
+- [Casting](#casting)
 
 </details>
 
@@ -85,7 +91,7 @@ public class MyApplication {
 
 ## Reading Input from Keyboard
 
-```
+```java
   import java.lang.*;   #default package
   import java.util.*;   # for scanner class
 
@@ -108,6 +114,8 @@ public class MyApplication {
 - **stack** - where local variables and references are created
 - **code section** - contains the code (class Loader loads the code, - **Interpreter/JIT** - just in time compilation will interpret the code)
 
+<p align="right"><a href="#top">⬆️ Back to Top</a></p>
+
 <hr/>
 
 ## Primitive Types
@@ -119,7 +127,7 @@ public class MyApplication {
 
 Code:
 
-```
+```java
 package com.decider;
 
 public class Main {
@@ -139,7 +147,7 @@ public class Main {
 - when declaring primitive types we don't need to declare memory, memory is allocated and released by JRE automatically
 - for reference types we need to always allocate memory, no need to release memory JRE will take care of that. (we use new keyword)
 
-```
+```java
 package com.decider;
 
 import java.util.Date;
@@ -157,7 +165,7 @@ public class Main {
 
 ## Primitive Types vs Reference Types
 
-```
+```java
 package com.decider;
 
 import java.awt.*;
@@ -198,7 +206,7 @@ and the '!','*' are arguments (actual values passed)
 
 ### 1. Declaration:
 
-```
+```java
 String traditional = new String("Hello World"); // Using new String() always creates a new object in heap.
 String shortHand = "Simple"; // Using string literals ("...") stores/reuses them in the String constant pool, making it memory-efficient.
 System.out.println(traditional);
@@ -235,7 +243,7 @@ Heap: new String("Hello World") → separate object with same content
 
 ## 3. Intro to some methods
 
-```
+```java
 String test ="   Hello World" + "!!  ";
 System.out.println(test.toLowerCase()); //will return string - hello world!!
 System.out.println(test.replace('!', '*')); // Hello World**
@@ -244,11 +252,15 @@ System.out.println(test.trim()); // Hello World!!
 System.out.println(test); //   Hello World!!
 ```
 
+<p align="right"><a href="#top">⬆️ Back to Top</a></p>
+
+<hr/>
+
 ## Escape Sequences
 
 ### 1. Declaration - \
 
-```
+```java
 System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
 ```
 
@@ -260,7 +272,7 @@ System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
 
 - **Step-1**: — Compile-Time Translation
 
-  ```
+  ```java
   String s = "Hello\nWorld";
   ```
 
@@ -301,6 +313,204 @@ System.out.println("hi\tthere\nfile\" is located\": C:\\Windows\n Search it");
 
 - Java also supports \u Unicode escapes, which are processed before lexical parsing.
 
-```
+```java
 System.out.println("\u0048\u0065\u006C\u006C\u006F"); \\Hello
 ```
+
+<p align="right"><a href="#top">⬆️ Back to Top</a></p>
+
+<hr/>
+
+## Arrays
+
+```java
+package com.javapractise;
+
+import java.util.Arrays;
+
+class Main {
+    public static void main(String[] args) {
+        int[] numbers = new int[5]; // Declaration - 1
+        numbers[0]=11;
+        numbers[1]=13;
+        System.out.println(Arrays.toString(numbers)); // [11, 13, 0, 0, 0]
+
+        int[] preKnown = {11,23,4,5,6}; // Declarataion - 2 
+        System.out.println(preKnown.length); // 5
+        Arrays.sort(preKnown);
+        System.out.println(Arrays.toString(preKnown)); // [4, 5, 6, 11, 23]
+    }
+}
+```
+
+1) In Java, arrays are part of the language syntax, not full objects from a class like Array —
+   so Java provides a utility class java.util.Arrays to operate on them externally.
+
+2) The deeper reason (under the hood)
+
+    - Arrays are built-in language constructs
+        When you declare:
+    ```java
+    int[] nums = {1, 2, 3};
+    ```
+    the JVM creates a special array object —
+    but its structure and methods are defined by the JVM, not by a user-visible Array class.
+
+    So nums doesn’t have methods like:
+    ```java
+    nums.sort(); ❌
+    nums.fill(0); ❌
+    ```
+
+    - Java separates data structures from utilities
+    Java’s design philosophy (since the early days):
+    ```
+        Keep core language types minimal and stable,
+        and provide reusable operations through static utility classes.
+    ```
+
+        That’s why:
+
+            - Arrays → static methods for array operations
+
+            - Collections → static methods for List, Set, Map
+
+            - Math → static math operations
+
+            - Objects → static null-safe helpers
+
+            This gives clarity, performance, and no hidden overhead on primitive arrays.
+
+    - Arrays in Java are not like JavaScript or Python lists
+
+        Languages like Python or JS make arrays true objects with dynamic prototypes (methods inside them).
+        Java doesn’t — it’s statically typed and JVM-backed, so array behavior is baked in at the VM level for speed.
+
+
+    - Summary
+
+        | Concept            | Explanation                                        |
+        | ------------------ | -------------------------------------------------- |
+        | `int[]`            | Language-level array, not a full class             |
+        | `java.util.Arrays` | Utility class with static methods                  |
+        | Why separate       | Keeps JVM-level performance and clean design       |
+        | Methods available  | sort, binarySearch, copyOf, fill, equals, toString |
+
+    - In short:
+        Java arrays = simple, fast memory blocks managed by JVM.
+        Arrays class = helper toolkit to manipulate them safely and efficiently.
+
+<p align="right"><a href="#top">⬆️ Back to Top</a></p>
+
+<hr/>
+
+## Multi-dimensional Arrays
+
+```java
+package com.javapractise;
+
+import java.util.Arrays;
+
+class Main {
+    public static void main(String[] args) {
+        int[][] numbers = new int[2][3]; // Declaration - 1
+        numbers[0][0]=11;
+        numbers[1][0]=13;
+        System.out.println(Arrays.deepToString(numbers)); // [[11, 0, 0], [13, 0, 0]]
+        int[][] preKnown = {{1,2,3},{4,5,6}};
+        System.out.println(preKnown.length); // row-len: 2
+        System.out.println(preKnown[0].length); // col-len: 3
+        System.out.println(Arrays.deepToString(preKnown)); // [[1, 2, 3], [4, 5, 6]]
+    }
+}
+```
+
+<hr/>
+
+## Constants
+
+ - We declare constants using **final** keyword.
+
+```java
+package com.javapractise;
+
+class Main {
+    public static void main(String[] args) {
+        final float PI = 3.14F; // Declaration
+        System.out.println(PI);
+    }
+}
+```
+
+<hr/>
+
+## Arithmetic Expressions
+
+```java
+package com.javapractise;
+
+class Main {
+    public static void main(String[] args) {
+        int add = 4 + 2;
+        int sub = 4 - 2;
+        int mul = 4 * 2;
+        int div = 4 / 2;
+        int rem = 4 % 2;
+        double divDouble = (double)4 / (double)2;
+        System.out.println(divDouble);
+
+        int x = 1;
+        int y = ++x; // prefix operator
+        int z = x++; // postfix operator
+        System.out.println("x:" + x + " y:" + y + " z:" + z);
+        
+        //Augmented or compound operator
+        x+=10;
+        System.out.println(x);
+    }
+}
+```
+
+<hr/>
+
+## Order of Operations (Operator Precedence)
+
+### 🧩 Basic Precedence Rules
+1️⃣ **Parentheses `( )`** → Highest priority  
+2️⃣ **Multiplication, Division, Modulus** → `*  /  %`  
+3️⃣ **Addition, Subtraction** → `+  -`
+
+### 🧠 Example
+```java
+int x = (10 * 3) + 2; // 32
+```
+
+<hr/>
+
+## Casting
+
+```java
+package com.javapractise;
+
+class Main {
+    public static void main(String[] args) {
+        // Implicit Casting - it is automatic, converting smaller data type to bigger data type, No Data Loss
+        // byte > short > int > long > float > double
+        short x = 1;
+        int y = x + 2; // here x is copies to anonymous int memory location since short(2 bytes) can be stored in int(4 bytes), and then addition takes place
+        System.out.println(y); // 3
+
+        // Explicit Casting - it is manual, converting bigger data type to smaller data type, Data Loss
+        // double > float > long > int > short > byte
+        double p = 1.1;
+        int q = (int)p +2;
+        System.out.println(q); // 3
+
+        String a = "1";
+        int b = Integer.parseInt(a) + 10;
+        System.out.println(b); // 11
+    }
+}
+```
+
+<hr/>
