added math class and formatting numbers in java

--- a/Java/1.Introduction.md
+++ b/Java/1.Introduction.md
@@ -22,6 +22,8 @@
 - [Arithmetic Expressions](#arithmetic-expressions)
 - [Order of Operations](#order-of-operations-operator-precedence)
 - [Casting](#casting)
+- [Math Class](#the-math-class)
+- [Formatting Numbers](#formatting-numbers)
 
 </details>
 
@@ -54,8 +56,8 @@
 
 - So, Java is platform independent
 
-**Java compilation:** javac Filename.java
-**Run Java Program1:** java com.decider.Main (if class was inside a package)
+**Java compilation:** javac Filename.java <br>
+**Run Java Program1:** java com.decider.Main (if class was inside a package) <br>
 **Run Java Program2:** java Main (if class was not inside a package)
 
 <hr/>
@@ -82,7 +84,7 @@ public class MyApplication {
 ### Key Notes
 
 - when class is declared public, only then file name and class name should be same
-- when there is no public class defined
+- we need the main method to start execution
 - If a class (or nested class) is defined, the compiler will create a corresponding .class file for all classes in the program.
 - to run the .class file it should contain main method
 - So when you run a java program(java First) it will start executing the .class file, and it starts searching for main function.
@@ -109,6 +111,17 @@ public class MyApplication {
 ## JVM Architecture
 
 -> Memory
+
++-------------------+
+|   Code Section    |
+|  (Method Area)    |
++-------------------+
+|       Heap        |
+|   (Objects)       |
++-------------------+
+|       Stack       |
+| (Local Variables) |
++-------------------+
 
 - **Heap** - where objects are created (dynamic)
 - **stack** - where local variables and references are created
@@ -514,3 +527,48 @@ class Main {
 ```
 
 <hr/>
+
+## The Math Class
+
+- No need to import Math class it will be provided by default in java.lang package
+
+```java
+package com.javapractise;
+
+class Main {
+    public static void main(String[] args) {
+        int result1 = Math.round(1.5F); // 1
+        int result2 = (int)Math.ceil(2.1D); // 3
+        int result3 = (int) Math.floor(4.9F); // 4
+        int result4 = Math.max(10, 11); // 11
+        int result5 = Math.min(10,11);  // 10
+        int result6 = (int) (Math.random() * 100); // 31 - random function gives b/w 0 to 1
+    }
+}
+```
+<hr/>
+
+## Formatting Numbers
+
+```java
+package com.javapractise;
+
+import java.text.NumberFormat;
+import java.util.Currency;
+
+class Main {
+    public static void main(String[] args) {
+        NumberFormat currency = NumberFormat.getCurrencyInstance();
+        currency.setCurrency(Currency.getInstance("USD"));
+        String usdAmount = currency.format(123456.891);
+        System.out.println(usdAmount); // $123,456.89
+        currency.setCurrency(Currency.getInstance("INR"));
+        String inrAmount = currency.format(1234567.89);
+        System.out.println(inrAmount); // ₹1,234,567.89
+
+        NumberFormat percent = NumberFormat.getPercentInstance();
+        String pointOnePercent = percent.format(0.1);
+        System.out.println(pointOnePercent); // 10%
+    }
+}
+```
