--- a/Java/2.Java Utilities & Collections.md
+++ b/Java/2.Java Utilities & Collections.md
@@ -32,6 +32,7 @@ public class Main {
         System.out.println(message.trim()); //op:Hello World!!
         System.out.println(message.toLowerCase()); //op:   hello world!!
         System.out.println(message.toUpperCase()); //op:   HELLO WORLD!!
+        System.out.println(message.replace("!", "*"));
         System.out.println(message.replaceAll("!!", "**")); //op:   Hello World**
         System.out.println(message.indexOf("o")); //op:7
         System.out.println(message.indexOf("Hello")); //op:3
