docs: Added Git and GitHub Notes
Added new notes Git and GitHub to the list and also updated some methods for Java Utility classes

--- a/Java/2.Java Utilities & Collections.md
+++ b/Java/2.Java Utilities & Collections.md
@@ -50,7 +50,8 @@ public class Main {
 ### Integer Class
 
 ```
-Integer.toBinaryString(1) // "1" convert integer to binary string
+Integer.toString(1234); // converts string to integer
+Integer.toBinaryString(1) // converts integer to binary string
 Integer.parseInt("1101", 2) // 13 binary to decimal
 Integer.parseInt("11") // converts string to number
 ```
