chore: fixed typos and some formattings in DSA
added fix for navigation from TOC, some formatting in text and some typos

--- a/DSA/1.Analysis of Algorithms Part-1.md
+++ b/DSA/1.Analysis of Algorithms Part-1.md
@@ -6,7 +6,7 @@
 
 - [The Role of Algorithm](./1.Analysis%20of%20Algorithms%20Part-1.md#the-role-of-algorithm)
 - [Asymptotic Complexity](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity)
-- [Asymptotic NOtation & Growth of Functions](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-notation-growth-of-functions)
+- [Asymptotic Notation & Growth of Functions](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-notation-and-growth-of-functions)
 - [Comparing of two functions](./1.Analysis%20of%20Algorithms%20Part-1.md#comparing-of-two-functions)
 - [Order of Growth](./1.Analysis%20of%20Algorithms%20Part-1.md#order-of-growth)
 - [Asymptotic Complexity - Examples](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity-examples)
@@ -130,7 +130,7 @@ This shows that Merge Sort is approximately **100 times faster** than Insertion 
 
 ---
 
-## Asymptotic Notation & Growth of Functions
+## Asymptotic Notation and Growth of Functions
 
 - **Lucky - Best Case:** Input already sorted
   - $T_{BC}(n) = \theta(n)$
@@ -146,7 +146,7 @@ This shows that Merge Sort is approximately **100 times faster** than Insertion 
 - $O$: upper bound $\le$
 - $\Omega$: lower bound $\ge$
 - $\theta$: tight asymptotic bound $=$
-- $O$:\*\* exclusive upper bound $<$
+- $O$: exclusive upper bound $<$
 - $\omega$: exclusive lower bound $>$
 
 ---
@@ -247,7 +247,7 @@ for (i = 3; i <= n; i++)
     op;
 ```
 
-$$T(n)= $\theta(n) (step_is_constant) $$
+$$T(n)= $\theta(n) (step is constant) $$
 
 ### Example-2
 
@@ -256,7 +256,7 @@ for (i = 3; i <= 2*n(bound); i++)
     op;
 ```
 
-$$T(n) = \theta(n) (step_is_constant) $$
+$$T(n) = \theta(n) (step is constant) $$
 
 ### Example-3
 
@@ -265,7 +265,7 @@ for (i = 3; i <= n; i*=2 (Step))
     op;
 ```
 
-$$T(n) = \theta(\log n) (step_is_not_constant,_it_grows) $$
+$$T(n) = \theta(\log n) (step is not constant, it grows) $$
 
 ### Example-4
 
@@ -274,26 +274,26 @@ for (i = 3; i <= n; i+=2)
     op;
 ```
 
-$$T(n) = \theta(n) (step_is_constant) $$
+$$T(n) = \theta(n) (step is constant) $$
 
 ---
 
 ### 📝 Note on Logarithm Base in Asymptotic Notation
 
-**Core Principle:** In Asymptotic Notation ($O, \Omega, \theta$), the base of the logarithm is **not required** and is conventionally dropped.
+- **Core Principle:** In Asymptotic Notation ($O, \Omega, \theta$), the base of the logarithm is **not required** and is conventionally dropped.
 
-**Mathematical Proof (Change of Base Formula):**
+- **Mathematical Proof (Change of Base Formula):**
 The change of base formula for logarithms is:
 $$\log_a x = \frac{\log_b x}{\log_b a}$$
 
-**Application to Complexity:**
-If we have an algorithm running in $O(\log_2 n)$ time, and we want to change the base to $10$:
-$$\log_2 n = \frac{\log_{10} n}{\log_{10} 2}$$
+- **Application to Complexity:**
+    -  If we have an algorithm running in $O(\log_2 n)$ time, and we want to change the base to $10$:
+      $$\log_2 n = \frac{\log_{10} n}{\log_{10} 2}$$
 
-Since $\log_{10} 2$ is a **constant** value (approximately 0.301), the expression becomes:
-$$\log_2 n = (\text{Constant}) \times \log_{10} n$$
+    -  Since $\log_{10} 2$ is a **constant** value (approximately 0.301), the expression becomes:
+      $$\log_2 n = (\text{Constant}) \times \log_{10} n$$
 
-In asymptotic analysis, we discard all constant factors. Therefore, $O(\log_2 n)$ is equivalent to $O(\log_{10} n)$, and both are simply written as $O(\log n)$.
+    -  In asymptotic analysis, we discard all constant factors. Therefore, $O(\log_2 n)$ is equivalent to $O(\log_{10} n)$, and both are simply written as $O(\log n)$.
 
 ---
 
