chore: fixded the formatting of text
fixed the formatting issue in text still

--- a/DSA/1.Analysis of Algorithms Part-1.md
+++ b/DSA/1.Analysis of Algorithms Part-1.md
@@ -247,7 +247,7 @@ for (i = 3; i <= n; i++)
     op;
 ```
 
-$$T(n)= $\theta(n) (step is constant) $$
+$$T(n)= $\theta(n) (step-is-constant) $$
 
 ### Example-2
 
@@ -256,7 +256,7 @@ for (i = 3; i <= 2*n(bound); i++)
     op;
 ```
 
-$$T(n) = \theta(n) (step is constant) $$
+$$T(n) = \theta(n) (step-is-constant) $$
 
 ### Example-3
 
@@ -265,7 +265,7 @@ for (i = 3; i <= n; i*=2 (Step))
     op;
 ```
 
-$$T(n) = \theta(\log n) (step is not constant, it grows) $$
+$$T(n) = \theta(\log n) (step-is-not-constant,-it-grows) $$
 
 ### Example-4
 
@@ -274,7 +274,7 @@ for (i = 3; i <= n; i+=2)
     op;
 ```
 
-$$T(n) = \theta(n) (step is constant) $$
+$$T(n) = \theta(n) (step-is-constant) $$
 
 ---
 
