docs: added some key points to remember for Analysis of algorithm
added the some general terms regarding logs, and basic conversions regarding time that needed
to be remembered

--- a/DSA/1.Analysis of Algorithms Part-1.md
+++ b/DSA/1.Analysis of Algorithms Part-1.md
@@ -9,6 +9,7 @@
 - [Asymptotic Notation & Growth of Functions](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-notation-and-growth-of-functions)
 - [Comparing of two functions](./1.Analysis%20of%20Algorithms%20Part-1.md#comparing-of-two-functions)
 - [Order of Growth](./1.Analysis%20of%20Algorithms%20Part-1.md#order-of-growth)
+- [General Terms to remember](./1.Analysis%20of%20Algorithms%20Part-1.md#general-terms-to-remember)
 - [Asymptotic Complexity - Examples](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity-examples)
 - [Worksheet 1.1: Growth of Functions and Run-Time Estimation](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-11-growth-of-functions-and-run-time-estimation)
 - [Worksheet 1.2: Asymptotic Complexity](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-12-asymptotic-complexity)
@@ -146,7 +147,7 @@ This shows that Merge Sort is approximately **100 times faster** than Insertion 
 - $O$: upper bound $\le$
 - $\Omega$: lower bound $\ge$
 - $\theta$: tight asymptotic bound $=$
-- $O$: exclusive upper bound $<$
+- $o$: exclusive upper bound $<$
 - $\omega$: exclusive lower bound $>$
 
 ---
@@ -234,9 +235,62 @@ Given two functions $f(n)$ and $g(n)$:
 
 <img width="673" height="682" alt="oog final" src="https://github.com/user-attachments/assets/5bdb8736-254b-4f6d-807f-51a92bd3fa42" />
 
+| Complexity     | 
+|-----------------|
+|  log(log n) | |  |
+|  $\log n$ |
+|  $(\log n)^{2} <=> \log^{2} n$ |
+|   $\sqrt{n}$ |
+|    n    |
+|  $n\log n$  |
+|  $n^{2}$   |
+|  $n^{3}$  |
+|  ...  |
+|  $n^{k}$  |
+|  $2^{n}$  |
+|  $3^{n}$  |
+|  ...  |
+|  $a^{n}$  |
+|  n!  |
+|  $n^{n}$  |
+
+
 <p align="right"><a href="#top">⬆️ Back to Top</a></p>
 
 ---
+
+## General Terms to remember
+
+- **Logarithm Rules**
+
+| Rule Name       | Formula                         | Notes                     |
+|-----------------|---------------------------------|---------------------------|
+| Definition      | $\log_b a = x ⇔ b^{x} = a$         | Base relation             |
+| Product Rule    |  $\log_b xy = \log_b x + \log_b y$  | Multiply → Add            |
+| Division Rule   | $\log_b (\frac{x}{y})= \log_b x - \log_b y$| Divide → Subtract         |
+| Power Rule      | $\log_b x^{k} = k * \log_b x $         | Power comes down          |
+| Change of Base  | $\log_b a = \frac{\log_c a}{\log_c b}$         | Convert base              |
+| Log of 1        | $\log_b 1 = 0 $                |                           |
+| Log of Base     | $\log_b b = 1 $                    |                           |
+| Inverse Rule    | $\log_b b^{x} = x $                  | Cancels out               |
+| Exponential     | $b^{\log_b x} = x $               | Reverse                   |
+
+
+- **Seconds Conversion**
+```
+1 second = 1000 milliseconds (ms) 
+1 ms     = 1000 microseconds (µs) = 10^-3 seconds
+1 µs     = 1000 nanoseconds (ns)  = 10^-6 seconds
+1 ns     = 10^-9 seconds 
+
+1 hour = 3600 seconds
+1 day = 24 hours
+1 month ≈ 30 days
+1 year ≈ 365 days
+```
+
+---
+
 
 ## Asymptotic Complexity Examples
 
